Move image to /images and update path

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Omaha Outdoor Adventures</title>
+<!-- Force rebuild: Added RV image to hero -->
 <style>
 body {
 font-family: Arial, sans-serif;
@@ -13,7 +14,7 @@ color: #333;
 background-color: #f5f5f5;
 }
 header {
-background: url('https://images.unsplash.com/photo-1563298723-dcfebaa392e3?auto=format&fit=crop&w=1950&q=80') no-repeat center center;
+background: url('images/hero-rv.jpg') no-repeat center center;
 background-size: cover;
 color: white;
 text-align: center;
